fix colors on docs navbar for dark mode

--- a/site/assets/scss/_navbar.scss
+++ b/site/assets/scss/_navbar.scss
@@ -69,7 +69,7 @@
   }
 
   .offcanvas-lg {
-    background-color: var(--bd-violet);
+    background-color: var(--bd-violet-bg);
     border-left: 0;
 
     @include media-breakpoint-down(lg) {
